--- a/app/views/users/signup.jade
+++ b/app/views/users/signup.jade
@@ -1,7 +1,7 @@
 extends auth
 
 block auth
-  form.signup.form-horizontal(action="/users", method="post")
+  form.signup.form-horizontal(action="/usuarios", method="post")
     .control-group
       label.control-label(for='nome') Nome Completo
       .controls
