--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,4 +1,10 @@
-script(type='text/javascript', src='/lib/jquery/jquery.js')
+div#footer
+  div.container
+    - year = new Date().getFullYear()
+    p.muted.credit
+      | Programa de Recompensas© 2011–
+      =year
+      | – Todos os direitos reservados.
 
 //Bootstrap
 script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.js')
