--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -2,8 +2,5 @@
 html(lang='en', xmlns='http://www.w3.org/1999/xhtml')
   include ../includes/head
   body
-    header.navbar.navbar-fixed-top.navbar-inverse(data-ng-include="'views/header.html'")
-    section.content
-      section.container
-        block content
+    div#wrap
     include ../includes/foot
