--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -9,6 +9,12 @@ div#footer
 //Bootstrap
 script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.js')
 
+//JQuery
+script(type='text/javascript', src='/js/jquery.uriAnchor.js')
+script(type='text/javascript', src='/js/jquery.event.ue.js')
+script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
+script(type='text/javascript', src='/lib/jquery-maskedinputs/dist/jquery.maskedinput.min.js')
+
 //AngularJS
 script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
