--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -14,12 +14,12 @@ head
   link(rel='stylesheet', href='/css/layout.css')
 
   script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-  script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-  script(type='text/javascript', src='/js/jquery.uriAnchor.js')
+
   script(type='text/javascript', src='/js/spa.js')
   script(type='text/javascript', src='/js/spa.data.js')
   script(type='text/javascript', src='/js/spa.model.js')
   script(type='text/javascript', src='/js/spa.shell.js')
+  script(type='text/javascript', src='/js/spa.home.js')
   script(type='text/javascript', src='/js/spa.checkin.js')
 
   block init
