--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -21,5 +21,6 @@ head
   script(type='text/javascript', src='/js/spa.shell.js')
   script(type='text/javascript', src='/js/spa.home.js')
   script(type='text/javascript', src='/js/spa.checkin.js')
+  script(type='text/javascript', src='/js/spa.checkout.js')
 
   block init
