client fake data

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -2,9 +2,9 @@ div#footer
   div.container
     - year = new Date().getFullYear()
     p.muted.credit
-      | Programa de Recompensas© 2011–
+      | Programa de Recompensas© 2011-
       =year
-      | – Todos os direitos reservados.
+      |&nbsp;–&nbsp;Todos os direitos reservados.
 
 //Bootstrap
 script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.js')
