--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -16,7 +16,9 @@ head
   script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 
   script(type='text/javascript', src='/js/spa.js')
+  script(type='text/javascript', src='/js/spa.util.js')
   script(type='text/javascript', src='/js/spa.data.js')
+  script(type='text/javascript', src='/js/spa.fake.js')
   script(type='text/javascript', src='/js/spa.model.js')
   script(type='text/javascript', src='/js/spa.shell.js')
   script(type='text/javascript', src='/js/spa.home.js')
