wip: fake checkin

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -11,6 +11,7 @@ script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.js')
 
 //JQuery
 script(type='text/javascript', src='/js/jquery.uriAnchor.js')
+script(type='text/javascript', src='/js/jquery.event.gevent.js')
 script(type='text/javascript', src='/js/jquery.event.ue.js')
 script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
 script(type='text/javascript', src='/lib/jquery-maskedinputs/dist/jquery.maskedinput.min.js')
