--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -3,4 +3,5 @@ html(lang='en', xmlns='http://www.w3.org/1999/xhtml')
   include ../includes/head
   body
     div#wrap
+      block main
     include ../includes/foot
