--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -8,13 +8,12 @@ head
 
   link(href='/img/icons/favicon.ico', rel='shortcut icon', type='image/x-icon')
   
-  link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.css')
-  link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap-responsive.css')
+  link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.min.css')
   link(rel='stylesheet', href='http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css')
   link(rel='stylesheet', href='/css/layout.css')
 
   // if lt IE 9
-    script(type='text/javascript', src='/lib/html5shiv/html5shiv.js')
+    script(type='text/javascript', src='/lib/html5shiv/js/html5shiv.js')
 
   script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 
