--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -7,11 +7,11 @@ div#footer
       |&nbsp;–&nbsp;Todos os direitos reservados.
 
 //Bootstrap
-script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.js')
+script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.min.js')
 
 //JQuery
 script(type='text/javascript', src='/js/jquery.uriAnchor.js')
 script(type='text/javascript', src='/js/jquery.event.gevent.js')
 script(type='text/javascript', src='/js/jquery.event.ue.js')
 script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-script(type='text/javascript', src='/lib/jquery-maskedinputs/dist/jquery.maskedinput.min.js')
+script(type='text/javascript', src='/lib/jquery-maskedinputs/js/jquery.maskedinput.min.js')
