--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,44 +1,74 @@
-.main.container {
-  width: 300px;
+.container {
+  width: auto;
+  max-width: 837px;
+  padding-bottom: 0;
+  position: relative;
+  min-height: 100%;
+  padding: 54px 14px 15px;
+  margin: 0 auto;
 }
 
-.container > .content {
-  width: 300px;
-  background-color: #f7f7f7;
-  padding: 20px;
-  margin: 40px -20px; 
-  -webkit-border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
-  border-radius: 10px 10px 10px 10px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+.container .content {
+  width: auto;
+  max-width: 835px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 225px rgba(255, 255, 255, .55);
+  box-shadow: 0 0 225px rgba(255, 255, 255, .55);
+}
+
+.content {
+  margin-bottom: 15px;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, .1);
+  background-clip: padding-box;
+  position: relative;
+  margin: 0 auto;
+  min-width: 244px;
+}
+
+.container .login-form {
+  width: auto;
+  max-width: 585px;
+  padding: 0 10px;
 }
 
 .login-form {
-  margin-left: 65px;
+  margin: 0 auto 10px;
+  display: block;
+  clear: both;
 }
 
-legend {
-  margin-right: -50px;
+.login-form h2 {
+  padding: 20px 0 10px 0;
+  clear: both;
+}
+
+h2 {
+  font-size: 24px;
   font-weight: bold;
-  color: #404040;
+  line-height: 1;
 }
 
-.navbar-right {
-  float: right !important;
+.forgot {
+  margin-left: 25px;
 }
 
-.navbar-form .form-group {
-  display: inline-block;
-  margin-bottom: 0;
-  vertical-align: middle;
+.form-control {
+  width: 220px;
+  margin-bottom: 5px;
 }
 
-.navbar-form input {
-  margin-right: 2px;
+.message {
+  position: fixed;
+  top: 45px;
+  z-index: 7000;
+  left: 0;
+  right: 0;
 }
 
-.text-right.text-error {
-  margin: 45px 20px;
+.alert {
+  background-color: rgba(242, 222, 222, .95);
+  position: relative;
+  margin: 0 auto;
+  width: 300px;
 }
