--- a/app/views/clientLogin.jade
+++ b/app/views/clientLogin.jade
@@ -10,12 +10,12 @@ block main
   div.container
     div.content
       div.login-form
-        h2 Faça login para entrar
-        form(action='/login', method='post')
+        h2 Faça o login para continuar
+        form(action='/entrar', method='post')
           fieldset
             div.clearfix
               div.col-sm-6
-                input.form-control(type='text', name='username', placeholder='Usuário')
+                input.form-control(type='text', name='email', placeholder='Email')
             div.clearfix
               div.col-sm-6
                 input.form-control(type='password', name='senha', placeholder='Senha')
