--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -2,6 +2,7 @@ extends layouts/default
 
 block init
   link(rel='stylesheet', href='/css/login.css')
+  link(rel='stylesheet', href='/css/index.css')
 
 block main
   nav.navbar.navbar-fixed-top.navbar-inverse
