--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,7 +4,7 @@
   padding-bottom: 0;
   position: relative;
   min-height: 100%;
-  padding: 54px 14px 15px;
+  padding: 0 14px;
   margin: 0 auto;
 }
 
@@ -66,4 +66,10 @@ h2 {
   position: relative;
   margin: 0 auto;
   width: 300px;
+}
+
+@media (max-width: 767px) {
+  a {
+    margin-left: 15px;
+  }
 }
