--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -26,6 +26,7 @@ head
   script(type='text/javascript', src='/js/spa.home.js')
   script(type='text/javascript', src='/js/spa.checkin.js')
   script(type='text/javascript', src='/js/spa.checkout.js')
+  script(type='text/javascript', src='/js/spa.consultar.js')
   script(type='text/javascript', src='/js/spa.user.js')
 
   block init
