--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -15,3 +15,4 @@ script(type='text/javascript', src='/js/jquery.event.gevent.js')
 script(type='text/javascript', src='/js/jquery.event.ue.js')
 script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
 script(type='text/javascript', src='/lib/jquery-maskedinputs/js/jquery.maskedinput.min.js')
+script(type='text/javascript', src='/lib/jquery-maskmoney/js/jquery.maskMoney.js')
