--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -72,3 +72,7 @@ nav .divider-vertical {
   border-right: 1px solid #222222;
   border-left: 1px solid #111111;
 }
+
+.hospedagem {
+  margin-left: 15px;
+}
