--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -27,6 +27,7 @@ head
   script(type='text/javascript', src='/js/spa.checkin.js')
   script(type='text/javascript', src='/js/spa.checkout.js')
   script(type='text/javascript', src='/js/spa.consultar.js')
+  script(type='text/javascript', src='/js/spa.relatorios.js')
   script(type='text/javascript', src='/js/spa.user.js')
 
   block init
