--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -17,6 +17,6 @@ head
 
   script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 
-  script(type='text/javascript', src='/js/spa.js')
+  script(type='text/javascript', src='/js/spa.min.js')
 
   block init
