--- a/app/views/userLogin.jade
+++ b/app/views/userLogin.jade
@@ -15,7 +15,7 @@ block main
           fieldset
             div.clearfix
               div.col-sm-6
-                input.form-control(type='text', name='username', placeholder='Usuário')
+                input.form-control(type='text', id="username", name='username', placeholder='Usuário')
             div.clearfix
               div.col-sm-6
                 input.form-control(type='password', name='senha', placeholder='Senha')
@@ -27,3 +27,6 @@ block main
       div.alert.alert-danger.alert-dismissable
         button.close(type='button', data-dismiss='alert', aria-hidden='true') &times;
         = error          
+  script.
+    var username=document.getElementById("username");
+    username.focus();
