start migration to angular

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -6,13 +6,10 @@ div#footer
       =year
       |&nbsp;–&nbsp;Todos os direitos reservados.
 
-//Bootstrap
+script(type='text/javascript', src='/lib/jquery/js/jquery.min.js')
+script(type='text/javascript', src='/lib/jquery-ui/js/jquery-ui.js')
 script(type='text/javascript', src='/lib/bootstrap/js/bootstrap.min.js')
-
-//JQuery
-script(type='text/javascript', src='/js/jquery.uriAnchor.js')
-script(type='text/javascript', src='/js/jquery.event.gevent.js')
-script(type='text/javascript', src='/js/jquery.event.ue.js')
-script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-script(type='text/javascript', src='/lib/jquery-maskedinputs/js/jquery.maskedinput.min.js')
-script(type='text/javascript', src='/lib/jquery-maskmoney/js/jquery.maskMoney.js')
+script(type='text/javascript', src='/lib/angular/js/angular.min.js')
+script(type='text/javascript', src='/lib/angular-route/js/angular-route.min.js')
+script(type='text/javascript', src='/lib/angular-ui-date/js/date.js')
+script(type='text/javascript', src='/js/spa.min.js')
