--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -1,7 +1,9 @@
 !!! 5
 html(lang='en', xmlns='http://www.w3.org/1999/xhtml')
   include ../includes/head
-  body
+  body(data-ng-app='spa')
     div#wrap
-      block main
+      nav.navbar.navbar-fixed-top.navbar-inverse(data-ng-include="'partials/header.html'", data-ng-controller="NavbarController")
+      div.container(data-ng-view)
+      div#push
     include ../includes/foot
