--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -5,22 +5,22 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="#/home">Programa de Recompensas</a>
+  <a class="navbar-brand" href="/home">Programa de Recompensas</a>
 </div>
 <div class="collapse navbar-collapse" id="navbar-collapse">
   <ul class="nav navbar-nav">
-    <li data-ng-class="{'active':highlight('/home')}"><a href="#/home"><span class="glyphicon glyphicon-home"></span></a></li>
-    <li data-ng-class="{'active':highlight('/checkin')}"><a href="#/checkin">Check-in</span></a></li>
-    <li data-ng-class="{'active':highlight('/checkout')}"><a href="#/checkout">Check-out</span></a></li>
-    <li data-ng-class="{'active':highlight('/consultar')}"><a href="#/consultar">Consultar</span></a></li>
-    <li data-ng-class="{'active':highlight('/relatorios')}"><a href="#/relatorios">Relatórios</span></a></li>
+    <li data-ng-class="{'active':highlight('/home')}"><a href="/home"><span class="glyphicon glyphicon-home"></span></a></li>
+    <li data-ng-class="{'active':highlight('/checkin')}"><a href="/checkin">Check-in</span></a></li>
+    <li data-ng-class="{'active':highlight('/checkout')}"><a href="/checkout">Check-out</span></a></li>
+    <li data-ng-class="{'active':highlight('/consultar')}"><a href="/consultar">Consultar</span></a></li>
+    <li data-ng-class="{'active':highlight('/relatorios')}"><a href="/relatorios">Relatórios</span></a></li>
   </ul>
   <ul class="nav navbar-nav pull-right">
     <li class="divider-vertical"></li>
     <li class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Marcus Moysés</a>
       <ul class="dropdown-menu">
-        <li><a href="/sair">Sair</a></li>
+        <li><a href="/sair" target="_self">Sair</a></li>
       </ul>
     </li>
   </ul>
