--- a/app/views/clientLogin.jade
+++ b/app/views/clientLogin.jade
@@ -1,4 +1,4 @@
-extends layouts/default
+extends layouts/login
 
 block init
   link(rel='stylesheet', href='/css/login.css')
@@ -15,7 +15,7 @@ block main
           fieldset
             div.clearfix
               div.col-sm-6
-                input.form-control(type='text', name='email', placeholder='Email')
+                input.form-control(type='text', id='email', name='email', placeholder='Email')
             div.clearfix
               div.col-sm-6
                 input.form-control(type='password', name='senha', placeholder='Senha')
@@ -27,3 +27,6 @@ block main
       div.alert.alert-danger.alert-dismissable
         button.close(type='button', data-dismiss='alert', aria-hidden='true') &times;
         = error          
+  script.
+    var email=document.getElementById('email');
+    email.focus();
