--- a/app/views/userLogin.jade
+++ b/app/views/userLogin.jade
@@ -28,5 +28,5 @@ block main
         button.close(type='button', data-dismiss='alert', aria-hidden='true') &times;
         = error          
   script.
-    var username=document.getElementById("username");
+    var username=document.getElementById('username');
     username.focus();
